Removed page title prom all pages. Added a method in ProjectuserService to connect to the new API endpoint to search for ProjectUsers by user and project ID. Added functionality to update project data. Started working on implementing functionality to modify user data in projects.

--- a/TFG_Projects_APP_Frontend/Pages/AppSettingsPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/AppSettingsPage.xaml
@@ -5,7 +5,9 @@
              xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
              xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
              x:DataType="pageModels:AppSettingsPageModel"
-             Title="AppSettingsPage">
+             Title="AppSettingsPage"
+             Shell.NavBarIsVisible="False"
+             NavigationPage.HasNavigationBar="False">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
