--- a/TFG_Projects_APP_Frontend/Pages/UserSettingsPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/UserSettingsPage.xaml
@@ -5,7 +5,9 @@
              xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
              xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
              x:DataType="pageModels:UserSettingsPageModel"
-             Title="UserSettingsPage">
+             Title="UserSettingsPage"
+             Shell.NavBarIsVisible="False"
+             NavigationPage.HasNavigationBar="False">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
